# software-practice-template

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test_and_deploy.yml  update-issue.yaml
.issues/: Instructor_issue_2.md  exercise_0.md  exercise_1.md  exercise_2.md  exercise_3.md  exercise_4.md  instructor_issue_1.md
docs/source/: api_index.rst  conf.py  index.rst
docs/source/api_generated/: software_practice_template.times.time_range.rst
rse_best_practices_playground/: __init__.py  times.py
software_practice_template/: __init__.py  times.py
