[project]
name = "rse-best-practices-playground"
authors = [{name = "lauraporta", email= "l.porta@ucl.ac.uk"}]
description = "Improve your software development skills with this repo!"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/neuroinformatics-unit/rse-best-practices-playground"
"Bug Tracker" = "https://github.com/neuroinformatics-unit/rse-best-practices-playground/issues"
"Documentation" = "https://neuroinformatics-unit.github.io/rse-best-practices-playground"

"Source Code" = "https://github.com/neuroinformatics-unit/rse-best-practices-playground"
"User Support" = "https://github.com/neuroinformatics-unit/rse-best-practices-playground/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
  "sphinx",
  "linkify-it-py",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "sphinx-autodoc-typehints",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rse_best_practices_playground*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=rse_best_practices_playground"

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 79
exclude = ["__init__.py","build",".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}
isolated_build = True

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=rse_best_practices_playground --cov-report=xml
"""
